--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "@heroicons/react": "^2.1.5",
     "graphql": "^16.9.0",
+    "iron-session": "^8.0.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
