--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "embla-carousel-react": "^8.2.1",
     "graphql": "^16.9.0",
     "iron-session": "^8.0.2",
     "lucide-react": "^0.428.0",
