--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql": "^16.9.0",
     "iron-session": "^8.0.2",
     "lucide-react": "^0.428.0",
+    "luxon": "^3.5.0",
     "next": "14.2.5",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
