--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-google-maps/api": "^2.19.3",
     "@types/validator": "^13.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
