--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
+    "@supabase/supabase-js": "^2.45.4",
     "@types/validator": "^13.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
