--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "tailwindcss-animate": "^1.0.7",
     "validator": "^13.12.0",
     "vaul": "^0.9.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
