--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.2.1",
+    "framer-motion": "^11.9.0",
     "graphql": "^16.9.0",
     "iron-session": "^8.0.2",
     "lucide-react": "^0.428.0",
