--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@react-google-maps/api": "^2.19.3",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.7.0",
     "@supabase/supabase-js": "^2.45.4",
     "@types/validator": "^13.12.0",
     "class-variance-authority": "^0.7.0",
@@ -41,11 +43,12 @@
     "iron-session": "^8.0.2",
     "lucide-react": "^0.428.0",
     "luxon": "^3.5.0",
-    "next": "14.2.5",
+    "next": "^14.2.5",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.2",
+    "stripe": "^17.1.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "validator": "^13.12.0",
